--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -850,3 +850,11 @@ footer .copy {
   max-width: 80%;
   margin: 0 auto;
 }
+
+.btn.btn-yellow {
+  background-color: #fdd912;
+  padding: 15px 30px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px 5px #cccccc;
+  border: 1px solid #fff;
+}
