--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -268,6 +268,13 @@
   font-weight: 400;
 }
 
+@media screen and (max-width: 500px) {
+  .section .filters,
+  .section .titles .title {
+    text-align: center;
+  }
+}
+
 @media (max-width: 1079px) {
   .section .titles .title {
     font-size: 28px;
@@ -449,6 +456,19 @@
   margin: 0;
   font-size: 13px;
   line-height: 22px;
+}
+
+@media screen and (max-width: 500px) {
+  .section.services .service-item .name {
+    text-align: center;
+  }
+  .section.services .service-item p {
+    text-align: center;
+  }
+  .section.services .service-item .circle .icon-image {
+    display: block;
+    margin: 0 auto;
+  }
 }
 
 /* 6. Portfolio */
@@ -857,6 +877,15 @@ footer .copy {
   border-radius: 8px;
   box-shadow: 0 0 10px 5px #cccccc;
   border: 1px solid #fff;
+  text-align: center;
+}
+
+@media screen and (max-width: 500px) {
+  .btn.btn-yellow {
+    display: block;
+    margin: 0 auto;
+    max-width: 200px;
+  }
 }
 
 .my-masonry-grid {
